Bill/view command (#249)
* Add Documentation for ViewCommand

* Remove html files

* Insert newline at EOF

* Fix DG

* Update docs/DeveloperGuide.adoc

Co-Authored-By: Liu Guangyuan (Gary) <garyliu2122@gmail.com>

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -482,6 +482,7 @@ extracted in runtime.
 
 // end::stats2[]
 
+
 // tag::export/import[]
 
 === Export/Import feature
@@ -712,6 +713,28 @@ image::TabSwitchSequenceDiagram.png[]
 ** Cons: Users who prefer a keyboard-driven workflow might not want to use the mouse.
 
 // end::tabs[]
+
+
+// tag::view[]
+
+=== [Miscellaneous] View feature
+
+This feature allows the user to view a meme as an enlarged picture. This also allows
+for long descriptions to be seen.
+
+image::ViewClassDiagram.png[]
+
+Using the above class diagram as a reference, VersionedWeme has a SimpleObjectProperty<Meme> attribute
+(initially contains a null meme) which sets the Meme for the ViewPanel to view. The Meme is retrieved
+as an ObservableValue<Meme> object in the model by MainWindow, which is
+passed into the ViewPanel to set the meme to display.
+
+The meme is viewed by using the ViewCommand in the memes context. The execution of the command firstly
+sets the meme to view based on the given index which is picked up by the listener which sets
+the meme details in the ViewPanel. Subsequently, the model context is set to the view context
+which switches the MemeGridPanel to ViewPanel, hence displaying the meme.
+
+// end::view[]
 
 // tag::dataencryption[]
 === [Proposed] Data Encryption
