--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -460,51 +460,75 @@ The "Upcoming deadlines" sidebar (right side of above picture) helps you keep tr
 
 === Calendar Commands
 
-****
+This section contains the commands for mananging your team member's calendars and for scheduling a project meeting time.
 
-Before using +Work's calendar features
-
-1. Have your team members download their calendar through NUSmods as an `.ics` file
-
-2. Team members import the file into their google calendar and add their weekly commitments
-
-3. Team members export the calendar as an `.ics` file once again
-
-4. Collect these calendar `.ics` files from team members
-
-5. Take note of the file path that the files are stored under
-
-Now you are ready to use +Work's calendar commands!
 
 ****
+Before you get started using +Work's calendar features, make sure you have completed the following steps
 
-==== Adding a member's calendar: `add-calendar`
+====
+
+1. Ensure your team members have exported their calendars as an `.ics` file (See below on how to export a calendar)
+
+2. Collect the calendar files from your team members
+
+3. Take note of the file path where the files are stored, it will be used later
+
+====
+
+****
+
+****
+
+Tip: How to export a calendars as an `.ics` file?
+
+====
+
+1. On the NUSmods page, click on the kbd:[Download] icon and select download as an iCalendar File(`.ics`)
+
+2. If you wish to include other commitments, simply open 'Google Calendar', click on kbd:[Settings], select kbd:[Import & Export] and import the file from Step 1
+
+3. Add any additional commitments through 'Google Calendar'
+
+4. Export the calendar again by clicking kbd:[Settings], followed by kbd:[Import & Export] and lastly kbd:[Export]
+
+5. The `.ics` file will be downloaded, containing your timetable from NUSmods and 'Google Calendar'
+
+****
+
+==== Adding a team member's calendar: `add-calendar`
+
+You can add a calendar by specifying the file path where the team member's calendar is stored as well as the name of the team member.
 
 Format: `add-calendar [mn/MEMBER_NAME] [fp/PATH_TO_ICS_FILE]`
 
 Example:
 
-You can add your team member John Doe's calendar file with the command
+Adding John Doe's calendar to +Work
 
 * `add-calendar mn/John Doe fp/C:\Users\gabriel\Desktop\CalendarFiles\john_calendar.ics` +
-John's calendar is now saved in +Work
 
-==== Removing a member's calendar: `delete-calendar`
+==== Removing a team member's calendar: `delete-calendar`
+
+You can also remove a calendar by specifying the team member's name.
 
 Format: `delete-calendar [mn/MEMBER_NAME]`
 
 Example:
 
-You can also remove a team member's calendar file like this,
+Removing John Doe's calendar from +Work
 
-* `add-calendar mn/John Doe` +
-John's calendar has been deleted from +Work
+* `delete-calendar mn/John Doe` +
 
-==== Find a meeting time: `find-meeting-time`
+==== Schedule a team meeting: `find-meeting-time`
+
+You can schedule your next meeting by specifying the time period between which you wish to hold your meeting as well as the duration of the meeting in hour(s).
+
++Work will help you find the most suitable meeting time between `START_DATE` and `END_DATE`.
 
 Format: `find-meeting-time [start/START_DATE] [end/END_DATE] [hours/DURATION]`
 
-Example:
+Example
 
 * `find-meeting-time start/__19-10-2019 08:00__ end/__29-10-2019 17:00__ hours/2` +
 Generates a grid showing the number of people who can make it for a particular time slot during the week (mock-up needed)
